# anita-cms

./: .gitignore  PLEASE_README.md  POST_MORTEM.md  README.md  SECURITY_CHECKLIST  TODO  config.json  default_config.json  default_pages.json  default_roles.json  example.env  example.html  flake.nix  htmltojsonpleasedontaskwhy.py  index.html  mail_config.json  main.py  output.html  pages.db  pyproject.toml  requirements.txt  secret.json  seedmakinghelper.py  start.bat  tailwind.py
anita-template/: .gitignore  anita-default.db  default_anita.db
data/: .gitignore  crud.py  database.py  db.py  forms_db.py  models.py  schemas.py
data/crud/: __init__.py  collections.py  forms.py  pages.py  stats.py  submissions.py
data/media/: .gitignore
routes/: admin_route.py  aina_route.py  asta_route.py  auth_route.py  config_route.py  dashboard_route.py  db_route.py  file_route.py  forms_route.py  mail_route.py  media_route.py  pages_route.py  public_route.py  roles_route.py  viel_route.py
services/: aina.py  asta.py  auth.py  config.py  dashboard.py  forms.py  media.py  pages.py  tags.py  users.py
src/: aina.py  alpine_generator.py  asta.py  auth.py  config.py  dependencies.py  embeds_generator.py  generator.py  llm.py  mail.py  roles.py  ssg_generator.py
src/templates/: collection_editor.js.j2  collection_list.js.j2  markdown.js.j2  public_content.js.j2  public_search.js.j2
static/admin/: admin.js  base.html  config.html  file_manager.html  form.html  index.html  main.js  media.html  page.html  page_hikarin.html  submissions.html  users.html  users_hikarin.html
static/aina/: index.html  main.js  style.css
static/aina-legacy/: index.html
static/asta/: index.html  main.js  style.css
static/auth/: index.html  login.html  login.js  (+5 more)
tests/: test_auth.py
(+124 files in other folders)
